Load interval seconds from storage and update interval seconds on input change

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
     <body>
         <h3>Tab Cycle</h3>
         <label for="interval">Interval (seconds):</label>
-        <input id="interval" type="number" min="1" value="5" />
+        <input id="interval" type="number" min="1" />
         <button id="start">Start</button>
         <button id="stop">Stop</button>
 
