feat: add configuration for cycling tabs in a specific window

--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,12 @@
                 </button>
             </div>
             <hr>
+            <label for="window-select">Cycle tabs in:</label>
+            <select id="window-select">
+                <option value="active">Active Window</option>
+                <!-- Dynamically add window IDs -->
+            </select>
+            <hr>
         </div>
         
         <div id="playlist-section">
