--- a/popup.html
+++ b/popup.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
+    <h1>TabCycle <span id="version" style="font-size: 0.6em; opacity: 0.7;"></span></h1>
     <div class="container">
-        <div>
-            <h1>TabCycle <span id="version" style="font-size: 0.6em; opacity: 0.7;"></span></h1>
-            <hr>
+        <div class="left-side">
             <label for="interval">Default cycle interval (seconds):</label>
             <input id="interval" type="number" min="1" value="15">
             <div class="button-group">
@@ -27,7 +26,7 @@
             <hr>
         </div>
         
-        <div id="playlist-section">
+        <div class="right-side" id="playlist-section">
             <!-- Tabs list will be inserted here -->
         </div>
     </div>
