### Added - Added open button in options page to open scheduled tabs immediately. - Updated options page icon.
### Fixed
- Fixed defect where repeating scheduled tabs would open on every change to scheduled tabs.
- Scheduled tabs will now repeatedly open only if it has first opened at its initially scheduled time.
- Truncated long URLs in tab cycle configuration table in options page and make them expandable.
- Adjusted layout of scheduled tabs table in popup.
- Improved "open next" info text for scheduled tabs in popup.

--- a/popup.html
+++ b/popup.html
@@ -36,18 +36,21 @@
         <button class="popup-button small" id="preview">Open All</button>
     </h2>
     
-    <div id="schedule-list"></div>
-    <table>
-        <thead>
-            <tr>
-                <th>Active</th>
-                <th>Name</th>
-                <th>Date & Time to Open</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody id="popup-table-body"></tbody>
-    </table>
+    <div class="popup-table-wrapper">
+        <div id="schedule-list"></div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Active</th>
+                        <th>Name</th>
+                        <th>Date & Time to Open</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody id="popup-table-body"></tbody>
+            </table>
+    </div>
+
 
     <div class="popup-buttons">
         <button class="popup-button large" id="options">Configure Tabs</button>
