--- a/options.html
+++ b/options.html
@@ -12,7 +12,7 @@
     <div id="scheduled-tabs-container">
         <header>
                 <h1>
-                    <img src="icons/header-icon.png" alt="TabCycle logo" style="height: 64px; vertical-align: middle; margin-right: 10px;">
+                    <img src="icons/settings-icon.png" alt="TabCycle logo" style="height: 64px; vertical-align: middle; margin-right: 10px;">
                     TabCycle Settings
                 </h1>  
                 <p>Here you can customize tab cycling and add scheduled tabs to open at specific times and days</p>
